--- a/Other Aspects/Hobbies.html
+++ b/Other Aspects/Hobbies.html
@@ -11,7 +11,7 @@
     <img height="200" src="../Playing Soccer.png">
     <p>I have also found a passion in eating oysters and have documented my many tastings through an oyster dedicated instagram account</p>
     <a href="https://www.instagram.com/oystersaustralia/">
-        <img height="200"src="../oysters.png">
+        <img height="200" src="../Oysters.png">
     </a>
 </body>
 </html>
